# uwsgi-dogstatsd-plugin

./: .cirrus.yml  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
tests/: uwsgi_dogstatsd_plugin_test.py
