[metadata]
name = uwsgi_dogstatsd_plugin
version = 0.0.0
description = a pip-installable version of uwsgi-dogstatsd
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getsentry/uwsgi-dogstatsd-plugin
author = Sentry
author_email = hello@sentry.io
license = Apache-2.0
license_file = LICENSE
license_files =
    LICENSE
    uwsgi-dogstatsd/LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7
